--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "タイムアタック用リーダーボードサーバー",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "14.x"
